fixed white space on right problem on sm devices

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
-body
-{
+body{   
     width: 100%;
     overflow-x: hidden;
 }
@@ -626,7 +626,7 @@ footer i:hover {
 /* for small devices */
 @media (max-width: 991.5px) {
     footer form {
-        width: 360px;
+        width: 300px;
     }
 
     footer i {
